--- a/home/picom/picom.conf
+++ b/home/picom/picom.conf
@@ -265,11 +265,11 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "glx";
+backend = "xr_glx_hybrid";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true; 
+vsync = false; 
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
