--- a/home/visuals/picom/picom.conf
+++ b/home/visuals/picom/picom.conf
@@ -18,8 +18,8 @@ animation-for-transient-window = "slide-up"; #popup windows
 #################################
 
 
-# Enabled client-side shadows on windows. Note desktop windows 
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
+# Enabled client-side shadows on windows. Note desktop windows
+# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false;
@@ -44,7 +44,7 @@ shadow-offset-y = -25;
 #
 dock-shadow = true;
 
-# Don't draw shadows on drag-and-drop windows. This option is deprecated, 
+# Don't draw shadows on drag-and-drop windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
 # no-dnd-shadow = false
@@ -58,12 +58,12 @@ dock-shadow = true;
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-blue = 0
 
-# Do not paint shadows on shaped windows. Note shaped windows 
-# here means windows setting its shape through X Shape extension. 
-# Those using ARGB background is beyond our control. 
-# Deprecated, use 
+# Do not paint shadows on shaped windows. Note shaped windows
+# here means windows setting its shape through X Shape extension.
+# Those using ARGB background is beyond our control.
+# Deprecated, use
 #   shadow-exclude = 'bounding_shaped'
-# or 
+# or
 #   shadow-exclude = 'bounding_shaped && !rounded_corners'
 # instead.
 #
@@ -75,11 +75,11 @@ dock-shadow = true;
 	# "! name~=''",
 
 # Specify a X geometry that describes the region in which shadow should not
-# be painted in, such as a dock window region. Use 
+# be painted in, such as a dock window region. Use
 #    shadow-exclude-reg = "x10+0+0"
 # for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
 #
-# shadow-exclude-reg = "" 
+# shadow-exclude-reg = ""
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
@@ -265,11 +265,11 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "xr_glx_hybrid";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = false; 
+vsync = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
