--- a/home/visuals/picom/picom.conf
+++ b/home/visuals/picom/picom.conf
@@ -2,16 +2,16 @@
 # #          Animations           #
 # #################################
 
-# animations: true;
-# animation-stiffness = 200
-# animation-window-mass = 0.4
-# animation-dampening = 20
-# animation-clamping = false
-# animation-for-open-window = "zoom"; #open window
-# animation-for-unmap-window = "zoom"; #minimize window
-# animation-for-workspace-switch-in = "slide-down"; #the windows in the workspace that is coming in
-# animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
-# animation-for-transient-window = "slide-up"; #popup windows
+animations: true;
+animation-stiffness = 200
+animation-window-mass = 0.4
+animation-dampening = 20
+animation-clamping = false
+animation-for-open-window = "zoom"; #open window
+animation-for-unmap-window = "zoom"; #minimize window
+animation-for-workspace-switch-in = "slide-down"; #the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
+animation-for-transient-window = "slide-up"; #popup windows
 
 #################################
 #           Animations         #
@@ -33,33 +33,33 @@
 
 #################################
 
-#enable or disable animations
-animations = true;
-#change animation speed of windows in current tag e.g open window in current tag
-animation-stiffness-in-tag = 125;
-#change animation speed of windows when tag changes
-animation-stiffness-tag-change = 90.0;
+# #enable or disable animations
+# animations = true;
+# #change animation speed of windows in current tag e.g open window in current tag
+# animation-stiffness-in-tag = 125;
+# #change animation speed of windows when tag changes
+# animation-stiffness-tag-change = 90.0;
 
-animation-window-mass = 0.4;
-animation-dampening = 15;
-animation-clamping = true;
+# animation-window-mass = 0.4;
+# animation-dampening = 15;
+# animation-clamping = true;
 
-#open windows
-animation-for-open-window = "fly-in";
-#minimize or close windows
-animation-for-unmap-window = "squeeze";
-#popup windows
-animation-for-transient-window = "slide-up"; #available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
+# #open windows
+# animation-for-open-window = "fly-in";
+# #minimize or close windows
+# animation-for-unmap-window = "squeeze";
+# #popup windows
+# animation-for-transient-window = "slide-up"; #available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
 
-#set animation for windows being transitioned out while changings tags
-animation-for-prev-tag = "minimize";
-#enables fading for windows being transitioned out while changings tags
-enable-fading-prev-tag = true;
+# #set animation for windows being transitioned out while changings tags
+# animation-for-prev-tag = "minimize";
+# #enables fading for windows being transitioned out while changings tags
+# enable-fading-prev-tag = true;
 
-#set animation for windows being transitioned in while changings tags
-animation-for-next-tag = "slide-in-center";
-#enables fading for windows being transitioned in while changings tags
-enable-fading-next-tag = true;
+# #set animation for windows being transitioned in while changings tags
+# animation-for-next-tag = "slide-in-center";
+# #enables fading for windows being transitioned in while changings tags
+# enable-fading-next-tag = true;
 
 #################################
 #             Shadows           #
@@ -282,24 +282,24 @@ rounded-corners-exclude = [
 # blur-kern = ""
 # blur-kern = "3x3box";
 
-blur: {
-  method = "dual_kawase";
-  strength = 9;
-  background = true;
-  background-frame = false;
-  background-fixed = false;
-}
+# blur: {
+#   method = "dual_kawase";
+#   strength = 9;
+#   background = true;
+#   background-frame = false;
+#   background-fixed = false;
+# }
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "window_type = 'tooltip'",
-  "window_type = 'menu'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'firefox'",
-];
+# blur-background-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "window_type = 'tooltip'",
+#   "window_type = 'menu'",
+#   "_GTK_FRAME_EXTENTS@:c",
+#   "class_g = 'firefox'",
+# ];
 
 #################################
 #       General Settings        #
@@ -315,7 +315,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "xrender";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
