--- a/home/visuals/polybar/config.ini
+++ b/home/visuals/polybar/config.ini
@@ -29,7 +29,7 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-modules-left = spacing0 L1 menu R1 sep bspwm sep pomo sep title sep temperature cpu memory sep
+modules-left = spacing0 L1 menu R1 sep bspwm sep title sep temperature cpu memory sep
 modules-center =
 modules-right = spacing0 lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
