Added all files

--- a/home/visuals/polybar/modules/menu.ini
+++ b/home/visuals/polybar/modules/menu.ini
@@ -1,6 +1,6 @@
 [module/menu]
 type = custom/text
-content = %{O1}❅%{O-1}
+content = %{O1} %{O-1}
 content-font = 15
 content-foreground = ${colors.background}
 content-background = ${colors.blue}
