--- a/home/visuals/polybar/modules/title.ini
+++ b/home/visuals/polybar/modules/title.ini
@@ -1,9 +1,9 @@
 [module/title]
 type = custom/script
-interval = 1
-exec = get-active-window
+interval = 0.1
+exec = ~/bin/get_active_window
 label = "%output%"
-label-minlen = 16
-label-maxlen = 16
+label-minlen = 50
+label-maxlen = 50
 label-font = 17
 label-foreground = ${colors.foreground}
