--- a/home/visuals/polybar/modules/wlan.ini
+++ b/home/visuals/polybar/modules/wlan.ini
@@ -1,6 +1,6 @@
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlp7s0
 interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
@@ -23,4 +23,4 @@ format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
 label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
 
-click-left = wifimenu
+click-left = nm-applet
