Added all files

--- a/home/visuals/polybar/modules/cpu.ini
+++ b/home/visuals/polybar/modules/cpu.ini
@@ -4,4 +4,4 @@ interval = 2
 
 format-prefix            = " "
 format-padding    = 2
-label                    = "%{F#EBCB8B} %{F-}%{F#a9b1d6}%percentage:2%%%{F-}"
+label                    = "%{F#EBCB8B} %{F-}%{F#a9b1d6}%percentage:2%%%{F-}"
