--- a/home/visuals/polybar/modules/wlan.ini
+++ b/home/visuals/polybar/modules/wlan.ini
@@ -23,4 +23,4 @@ format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
 label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
 
-click-left = nm-applet
+click-left = nm-connection-editor
