Added all files

--- a/home/visuals/polybar/modules/pulseaudio.ini
+++ b/home/visuals/polybar/modules/pulseaudio.ini
@@ -2,7 +2,6 @@
 type = internal/pulseaudio
 use-ui-max = false
 
-
 format-volume            = <ramp-volume><label-volume>
 format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.bcolor2}
@@ -12,21 +11,21 @@ label-volume-padding     = 1
 
 format-muted-foreground     = ${colors.alert}
 format-muted-background     = ${self.format-volume-background}
-format-muted-prefix         = 
+format-muted-prefix         = 
 format-muted-prefix-padding = 1
 label-muted-foreground = ${colors.foreground}
 label-muted                 = Muted
 label-muted-padding         = ${self.label-volume-padding}
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰖀
+ramp-volume-3 = 󰕾
+ramp-volume-4 = 󰕾
 ramp-volume-padding = 1
 ramp-volume-foreground = ${colors.blue}
 
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-headphones-0 = 
+ramp-headphones-1 = 󰟎
 
-click-right = pavucontrol&
+click-right = pavucontrol &
