--- a/home/visuals/polybar/include-modules.ini
+++ b/home/visuals/polybar/include-modules.ini
@@ -3,6 +3,7 @@ include-file = $HOME/.config/polybar/colors.ini
 include-file = $HOME/.config/polybar/modules/menu.ini
 
 include-file = $HOME/.config/polybar/modules/battery.ini
+include-file = $HOME/.config/polybar/modules/tray.ini
 include-file = $HOME/.config/polybar/modules/bspwm.ini
 include-file = $HOME/.config/polybar/modules/cpu.ini
 include-file = $HOME/.config/polybar/modules/date.ini
