--- a/home/visuals/polybar/modules/bspwm.ini
+++ b/home/visuals/polybar/modules/bspwm.ini
@@ -1,6 +1,9 @@
 [module/bspwm]
 type = internal/bspwm
 
+padding_right = 2
+padding_left = 1
+
 pin-workspaces = true
 inline-mode = false
 
@@ -9,13 +12,13 @@ enable-scroll = true
 reverse-scroll = true
 
 fuzzy-match = true
-ws-icon-0=1;
-ws-icon-1=2;󰈹
+ws-icon-0=1;
+ws-icon-1=2;
 ws-icon-2=3;
 ws-icon-3=4;
-ws-icon-4=5;
-ws-icon-5=6;
-ws-icon-6=7;󰴈
+ws-icon-4=5;
+ws-icon-5=6;
+ws-icon-6=7;
 ws-icon-default = ""
 
 format = <label-state>
@@ -23,31 +26,33 @@ format-font = 14
 
 label-monitor = %icon%
 
+
+
 label-focused = %icon%
 label-focused-foreground = ${colors.altmagenta}
 label-focused-background = ${colors.background}
 label-focused-underline =  ${colors.altmagenta}
-label-focused-padding-right = 2
-label-focused-padding-left = 1
+label-focused-padding-right = ${self.padding_right}
+label-focused-padding-left = ${self.padding_left}
 
 label-occupied = %icon%
 label-occupied-foreground = ${colors.blue}
 label-occupied-background = ${colors.background}
 ;label-occupied-underline =
-label-occupied-padding-right = 2
-label-occupied-padding-left = 1
+label-occupied-padding-right = ${self.padding_right}
+label-occupied-padding-left = ${self.padding_left}
 
 label-urgent = %icon%
 label-urgent-foreground = ${colors.red}
 label-urgent-background = ${colors.background}
 label-urgent-underline =  ${colors.red}
-label-urgent-padding-right = 2
-label-urgent-padding-left = 1
+label-urgent-padding-right = ${self.padding_right}
+label-urgent-padding-left = ${self.padding_left}
 
 label-empty = %icon%
 label-empty-foreground = ${colors.foreground}
-label-empty-padding-right = 2
-label-empty-padding-left = 1
+label-empty-padding-right = ${self.padding_right}
+label-empty-padding-left = ${self.padding_left}
 
 ; Separator in between workspaces
 label-separator = " "
