--- a/home/visuals/polybar/modules/date.ini
+++ b/home/visuals/polybar/modules/date.ini
@@ -5,7 +5,7 @@ interval = 1
 format                = <label>
 format-foreground     = ${colors.foreground}
 format-background     = ${colors.bg-alt}
-format-prefix         = 
+format-prefix         = 
 format-prefix-foreground = ${colors.magenta}
 format-prefix-padding = 1
 label                 = %time%
