--- a/home/visuals/polybar/modules/eth.ini
+++ b/home/visuals/polybar/modules/eth.ini
@@ -7,7 +7,7 @@ unknown-as-up = true
 
 format-connected-foreground        = ${colors.foreground}
 format-connected-background        = ${colors.bcolor4}
-format-connected-prefix            = 
+format-connected-prefix            = 󰈁
 format-connected-prefix-foreground = ${colors.color9}
 format-connected-prefix-padding    = 1
 label-connected                    = %local_ip%
