--- a/home/visuals/polybar/modules/title.ini
+++ b/home/visuals/polybar/modules/title.ini
@@ -5,5 +5,5 @@ exec = ~/bin/get_active_window
 label = "%output%"
 label-minlen = 25
 label-maxlen = 25
-label-font = 17
+; label-font =
 label-foreground = ${colors.foreground}
