--- a/home/visuals/polybar/modules/wlan.ini
+++ b/home/visuals/polybar/modules/wlan.ini
@@ -8,7 +8,7 @@ unknown-as-up = true
 format-connected                   = <label-connected>
 format-connected-background        = ${colors.bcolor4}
 format-connected-foreground        = ${colors.foreground}
-format-connected-prefix            = 
+format-connected-prefix            = 󰖩
 format-connected-prefix-foreground = ${colors.color8}
 format-connected-prefix-padding    = 1
 label-connected                    = %{A1:~/bin/wifimenu:}%essid%%{A}
@@ -18,7 +18,7 @@ label-connected-padding            = 1
 format-disconnected                = <label-disconnected>
 format-disconnected-foreground     = ${colors.alert}
 format-disconnected-background     = ${self.format-connected-background}
-format-disconnected-prefix         = 
+format-disconnected-prefix         = 󰖪
 format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
 label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
