Added all files

--- a/home/visuals/polybar/arrows.ini
+++ b/home/visuals/polybar/arrows.ini
@@ -31,11 +31,17 @@ type = custom/text
 content = ${arrow.aleft}
 content-foreground  = ${colors.blue}
 
+[module/sl0]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.bcolor1}
+content-background  = ${colors.blue3}
+
 [module/sl1]
 type = custom/text
 content = ${arrow.aleft}
 content-foreground  = ${colors.bcolor2}
-content-background  = ${colors.blue3}
+content-background  = ${colors.bcolor1}
 
 [module/sl2]
 type = custom/text
