--- a/home/visuals/polybar/colors.ini
+++ b/home/visuals/polybar/colors.ini
@@ -1,10 +1,10 @@
 [colors]
 bg = #181825
 bg-alt = #1a1b26
-fg = #ECEFF4
-fg-alt = #E5E9F0
+fg = #eceff4
+fg-alt = #e5e9f0
 
-blue = #7aa2f7
+blue = #5ea8f2
 cyan = #88C0D0
 green = #A3BE8C
 orange = #D08770
@@ -12,6 +12,7 @@ purple = #B48EAD
 red = #BF616A
 magenta = #ad8ee6
 yellow = #EBCB8B
+pink = #f77ab9
 
 black = #000
 white = #FFF
@@ -34,7 +35,7 @@ color7          = #bf616a
 color8          = #bdb2ff
 color9          = #caffbf
 
-bcolor1         = #2e2e40
+bcolor1         = #46475c
 bcolor2         = #313244
 bcolor3         = #262633
 bcolor4         = #1e1e2e
@@ -50,8 +51,8 @@ altmagenta = #bb9af7
 altcyan = #0db9d7
 altwhite = #acb0d0
 
-blue1 = #7aa2f7
-blue2 = #4E83C9
-blue3 = #4170ba
-blue4 = #2871cc
-blue5 = #003f9a
+blue1 = #7093e8
+blue2 = #878ce3
+blue3 = #9c85db
+blue4 = #ae7dd1
+blue5 = #bd76c5
