--- a/home/visuals/polybar/config.ini
+++ b/home/visuals/polybar/config.ini
@@ -7,7 +7,7 @@ include-file = $HOME/.config/polybar/arrows.ini
 [bar/main]
 monitor = eDP-1
 width = 100%
-height = 40
+height = 35
 line-size = 2
 top = true
 fixed-center = true
@@ -31,7 +31,7 @@ include-file = $HOME/.config/polybar/fonts.ini
 
 modules-left = spacing0 L1 menu R1 sep bspwm sep title sep temperature cpu memory
 modules-center =
-modules-right = spacing0 lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 tray pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
+modules-right = spacing0 lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl0 tray sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
 cursor-click = pointer
 cursor-scroll = ns-resize
