--- a/home/visuals/polybar/fonts.ini
+++ b/home/visuals/polybar/fonts.ini
@@ -5,7 +5,7 @@ font-3 = "JetBrainsMono Nerd Font:style=Italic:size=15;3"
 font-4 = "JetBrainsMono Nerd Font:style=Medium Italic:size=15;3"
 font-5 = "JetBrainsMono Nerd Font:size=23;6"
 
-font-6 = "JetBrainsMono Nerd Font:size=12.4;3.5"
+font-6 = "Noto Sans Mono CJK JP:size=14;3.5"
 
 font-7 = "Material Icons:size=13;4"
 font-8 = "Material Icons Outlined:size=13;4"
@@ -15,6 +15,6 @@ font-11 = "Material Icons TwoTone:size=13;4"
 
 font-12 = "Iosevka Nerd Font:style=Medium:size=24;6"
 font-13 = "Iosevka Nerd Font:size=16;3"
-font-14 = "Iosevka Nerd Font:size=25;6"
+font-14 = "Iosevka Nerd Font:size=23;6"
 font-15 = "Iosevka Nerd Font:size=16;4"
 font-16 = "JetBrainsMono Nerd Font:size=15;2"
