--- a/home/visuals/polybar/modules/bspwm.ini
+++ b/home/visuals/polybar/modules/bspwm.ini
@@ -14,9 +14,9 @@ reverse-scroll = true
 fuzzy-match = true
 ws-icon-0=1;
 ws-icon-1=2;
-ws-icon-2=3;
+ws-icon-2=3;
 ws-icon-3=4;
-ws-icon-4=5;
+ws-icon-4=5;
 ws-icon-5=6;
 ws-icon-6=7;
 ws-icon-default = ""
@@ -26,19 +26,16 @@ format-font = 14
 
 label-monitor = %icon%
 
-
-
 label-focused = %icon%
-label-focused-foreground = ${colors.altmagenta}
+label-focused-foreground = ${colors.pink}
 label-focused-background = ${colors.background}
-label-focused-underline =  ${colors.altmagenta}
+label-focused-underline =  ${colors.pink}
 label-focused-padding-right = ${self.padding_right}
 label-focused-padding-left = ${self.padding_left}
 
 label-occupied = %icon%
 label-occupied-foreground = ${colors.blue}
 label-occupied-background = ${colors.background}
-;label-occupied-underline =
 label-occupied-padding-right = ${self.padding_right}
 label-occupied-padding-left = ${self.padding_left}
 
