--- a/home/visuals/polybar/modules/cpu.ini
+++ b/home/visuals/polybar/modules/cpu.ini
@@ -2,6 +2,7 @@
 type = internal/cpu
 interval = 2
 
-format-prefix            = ""
-format-padding    = 2
-label                    = "%{F#EBCB8B} %{F-}%{F#a9b1d6}%percentage:2%%%{F-}"
+format-prefix = ""
+label-padding-left = 2
+
+label = "%{F#EBCB8B} %{F-}%{F#a9b1d6}%percentage:2%%%{F-}"
