--- a/home/visuals/polybar/modules/pulseaudio.ini
+++ b/home/visuals/polybar/modules/pulseaudio.ini
@@ -17,11 +17,11 @@ label-muted-foreground = ${colors.foreground}
 label-muted                 = Muted
 label-muted-padding         = ${self.label-volume-padding}
 
-ramp-volume-0 = 󰕿
-ramp-volume-1 = 󰖀
-ramp-volume-2 = 󰖀
-ramp-volume-3 = 󰕾
-ramp-volume-4 = 󰕾
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
 ramp-volume-padding = 1
 ramp-volume-foreground = ${colors.blue}
 
