--- a/home/visuals/polybar/modules/tray.ini
+++ b/home/visuals/polybar/modules/tray.ini
@@ -1,7 +1,11 @@
 [module/tray]
 type = internal/tray
-format-background = ${colors.bcolor2}
-tray-spacing = 10
-tray-background = ${colors.bcolor2}
-tray-foreground = ${colors.bcolor2}
+
+format-padding = 1
+tray-spacing = 5
+tray-padding = 5
 tray-size = 25
+
+format-background = ${colors.bcolor1}
+tray-background = ${colors.bcolor1}
+tray-foreground = ${colors.bcolor1}
