Check fucking point

--- a/home/visuals/polybar/config/colors.ini
+++ b/home/visuals/polybar/config/colors.ini
@@ -35,7 +35,8 @@ color7          = #bf616a
 color8          = #bdb2ff
 color9          = #caffbf
 
-bcolor1         = #46475c
+bcolor0         = #57586d
+bcolor1         = #3f405b
 bcolor2         = #313244
 bcolor3         = #262633
 bcolor4         = #1e1e2e
