--- a/home/visuals/polybar/config/include-modules.ini
+++ b/home/visuals/polybar/config/include-modules.ini
@@ -4,6 +4,7 @@ include-file = $HOME/.config/polybar/modules/menu.ini
 
 include-file = $HOME/.config/polybar/modules/battery.ini
 include-file = $HOME/.config/polybar/modules/tray.ini
+include-file = $HOME/.config/polybar/modules/backlight.ini
 include-file = $HOME/.config/polybar/modules/bspwm.ini
 include-file = $HOME/.config/polybar/modules/cpu.ini
 include-file = $HOME/.config/polybar/modules/date.ini
