--- a/home/visuals/polybar/config/modules/pulseaudio.ini
+++ b/home/visuals/polybar/config/modules/pulseaudio.ini
@@ -2,6 +2,8 @@
 type = internal/pulseaudio
 use-ui-max = false
 
+format-font = 14
+
 format-volume            = <ramp-volume><label-volume>
 format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.bcolor2}
