--- a/home/visuals/polybar/config/modules/temperature.ini
+++ b/home/visuals/polybar/config/modules/temperature.ini
@@ -4,6 +4,9 @@ interval = 1
 thermal-zone = 0
 warn-temperature = 75
 hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input
+
+format-font = 14
+
 format = <label>
 format-prefix = %{F#D08770}%{T10}󰔏%{T-}
 format-prefix-foreground = ${colors.bg}
