--- a/home/visuals/polybar/config/modules/title.ini
+++ b/home/visuals/polybar/config/modules/title.ini
@@ -5,5 +5,5 @@ exec = ~/bin/get_active_window
 label = "%output%"
 label-minlen = 25
 label-maxlen = 25
-; label-font = 7
+label-font = 7
 label-foreground = ${colors.foreground}
