--- a/home/visuals/polybar/config/modules/wlan.ini
+++ b/home/visuals/polybar/config/modules/wlan.ini
@@ -5,6 +5,8 @@ interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
 
+format-font = 14
+
 format-connected                   = <label-connected>
 format-connected-background        = ${colors.bcolor4}
 format-connected-foreground        = ${colors.foreground}
