--- a/home/visuals/polybar/config/arrows.ini
+++ b/home/visuals/polybar/config/arrows.ini
@@ -16,98 +16,104 @@ aright = "%{O-1}%{T13} %{T-}%{O-11}"
 
 [module/R1]
 type = custom/text
-content = ${arrow.aright}
-content-foreground  = ${colors.blue}
+format = ${arrow.aright}
+format-foreground  = ${colors.blue}
 
 [module/sr4]
 type = custom/text
-content = ${arrow.aright}
-content-foreground  = ${colors.bcolor5}
-content-background  = ${colors.blue1}
+format = ${arrow.aright}
+format-foreground  = ${colors.bcolor5}
+format-background  = ${colors.blue1}
 
 ;; left separators
 [module/L1]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.blue}
+format = ${arrow.aleft}
+format-foreground  = ${colors.blue}
 
 [module/sl0]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor1}
-content-background  = ${colors.blue3}
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor0}
+format-background  = ${colors.blue3}
 
 [module/sl1]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor2}
-content-background  = ${colors.bcolor1}
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor1}
+format-background  = ${colors.bcolor0}
 
 [module/sl2]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor3}
-content-background  = ${colors.bcolor2}
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor2}
+format-background  = ${colors.bcolor1}
 
 [module/sl3]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor4}
-content-background  = ${colors.bcolor3}
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor3}
+format-background  = ${colors.bcolor2}
 
 [module/sl4]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor5}
-content-background  = ${colors.bcolor4}
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor4}
+format-background  = ${colors.bcolor3}
+
+[module/sl5]
+type = custom/text
+format = ${arrow.aleft}
+format-foreground  = ${colors.bcolor5}
+format-background  = ${colors.bcolor4}
 
 [module/lblue1]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.blue1}
+format = ${arrow.aleft}
+format-foreground  = ${colors.blue1}
 
 [module/lblue2]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.blue2}
-content-background  = ${colors.blue1}
+format = ${arrow.aleft}
+format-foreground  = ${colors.blue2}
+format-background  = ${colors.blue1}
 
 [module/lblue3]
 type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.blue3}
-content-background  = ${colors.blue2}
+format = ${arrow.aleft}
+format-foreground  = ${colors.blue3}
+format-background  = ${colors.blue2}
 
 [module/spacing0]
 type = custom/text
-content = " "
-content-background  = ${colors.background}
+format = " "
+format-background  = ${colors.background}
 
 [module/spacing1]
 type = custom/text
-content = " "
-content-background  = ${colors.blue1}
+format = " "
+format-background  = ${colors.blue1}
 
 [module/spacing2]
 type = custom/text
-content = " "
-content-background  = ${colors.blue2}
+format = " "
+format-background  = ${colors.blue2}
 
 [module/spacing3]
 type = custom/text
-content = " "
-content-background  = ${colors.blue3}
+format = " "
+format-background  = ${colors.blue3}
 
 [module/spacing]
 type = custom/text
-content = "      "
-content-background = ${colors.background}
+format = "      "
+format-background = ${colors.background}
 
 [module/sep]
 type = custom/text
-content = "󰇙"
+format = "󰇙"
 
-content-font = 15
-content-background = ${colors.background}
-content-foreground = ${colors.altblack}
-content-padding = 1
+format-font = 15
+format-background = ${colors.background}
+format-foreground = ${colors.altblack}
+format-padding = 1
