--- a/home/visuals/polybar/config/modules/eth.ini
+++ b/home/visuals/polybar/config/modules/eth.ini
@@ -1,9 +1,11 @@
 [module/eth]
 type = internal/network
-interface =  enp2s0
+interface =  enp6s0
 interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
+
+format-font = 14
 
 format-connected-foreground        = ${colors.foreground}
 format-connected-background        = ${colors.bcolor4}
