Added all files

--- a/home/programs/shells/joshuto/config/icons.toml
+++ b/home/programs/shells/joshuto/config/icons.toml
@@ -11,16 +11,25 @@ directory = ""
 [directory_exact]
 # English
 ".git" = ""
+"github" = ""
+"Github" = ""
 "Desktop" = ""
+"desktop" = ""
 "Documents" = ""
+"docs" = ""
 "Downloads" = ""
+"download" = ""
 "Dotfiles" = ""
 "Dropbox" = ""
 "Music" = ""
+"music" = ""
 "Pictures" = ""
+"pictures" = ""
+"photos" = ""
 "Public" = ""
 "Templates" = ""
 "Videos" = ""
+"videos" = ""
 # Spanish
 "Escritorio" = ""
 "Documentos" = ""
