--- a/home/visuals/polybar/config/fonts.ini
+++ b/home/visuals/polybar/config/fonts.ini
@@ -5,13 +5,13 @@ font-3 = "JetBrainsMono Nerd Font:style=Italic:size=15;3"
 font-4 = "JetBrainsMono Nerd Font:style=Medium Italic:size=15;3"
 font-5 = "JetBrainsMono Nerd Font:size=23;6"
 
-font-6 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
+font-6 = "JetBrainsMono Nerd Font:size=14;3.5"
 
-font-7 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
-font-8 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
-font-9 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
-font-10 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
-font-11 = "JetBrainsMonoNL Nerd Font:size=14;3.5"
+font-7 = "JetBrainsMono Nerd Font:size=14;3.5"
+font-8 = "JetBrainsMono Nerd Font:size=14;3.5"
+font-9 = "JetBrainsMono Nerd Font:size=14;3.5"
+font-10 = "JetBrainsMono Nerd Font:size=14;3.5"
+font-11 = "JetBrainsMono Nerd Font:size=14;3.5"
 
 font-12 = "Iosevka Nerd Font:style=Medium:size=24;6"
 font-13 = "Iosevka Nerd Font:size=16;3"
