--- a/home/visuals/polybar/config/modules/date.ini
+++ b/home/visuals/polybar/config/modules/date.ini
@@ -13,3 +13,5 @@ label-foreground = ${colors.foreground}
 label-padding         = 1
 time                  = %d/%m/%Y, %I:%M %p
 time-alt              = %A, %d %B %Y
+
+click-right = ~/bin/calendar_launcher
