--- a/home/visuals/polybar/config/modules/date.ini
+++ b/home/visuals/polybar/config/modules/date.ini
@@ -14,4 +14,6 @@ label-padding         = 1
 time                  = %d/%m/%Y, %I:%M %p
 time-alt              = %A, %d %B %Y
 
-click-right = ~/bin/calendar_launcher
+click-left =
+click-middle =
+click-right = "~/bin/calendar_launcher"
