--- a/home/visuals/polybar/config/modules/date.ini
+++ b/home/visuals/polybar/config/modules/date.ini
@@ -4,7 +4,7 @@ interval = 1
 
 format                = <label>
 format-foreground     = ${colors.foreground}
-format-background     = ${colors.bg-alt}
+format-background     = ${colors.bcolor5}
 format-prefix         = 
 format-prefix-foreground = ${colors.magenta}
 format-prefix-padding = 1
