--- a/home/visuals/polybar/config/modules/wlan.ini
+++ b/home/visuals/polybar/config/modules/wlan.ini
@@ -25,4 +25,4 @@ format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
 label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
 
-click-left = nm-connection-editor
+click-left = ~/bin/wifi_menu
