--- a/home/shell/starship/starship.toml
+++ b/home/shell/starship/starship.toml
@@ -22,31 +22,31 @@ zsh_indicator = '[ZSH](bright-white) '
 disabled = false
 show_always = true
 format =  '[$user]($style)'
-style_user = '#00c8ff'
-style_root = '#ff006a'
+style_user = 'bold #00c8ff'
+style_root = 'bold #ff006a'
 
 [hostname]
 format = '@[$hostname]($style) '
 disabled = false
-style = '#ff006a'
+style = 'bold #ff006a'
 ssh_only = false
 
 [git_branch]
 only_attached = true
 format = '[$symbol$branch]($style) '
 symbol = ''
-style = 'bright-yellow bold'
+style = 'bold bright-yellow bold'
 
 [git_commit]
 only_detached = true
 format = '[ﰖ$hash]($style) '
-style = 'bright-yellow bold'
+style = 'bold bright-yellow bold'
 
 [git_state]
-style = 'bright-purple bold'
+style = 'bold bright-purple bold'
 
 [git_status]
-style = 'bright-green bold'
+style = 'bold bright-green bold'
 
 [directory]
 disabled = false
