--- a/home/shell/kitty/config/kitty.conf
+++ b/home/shell/kitty/config/kitty.conf
@@ -39,9 +39,23 @@ underline_hyperlinks always
 
 tab_bar_edge top
 tab_bar_min_tabs 1
-tab_bar_style powerline
-tab_powerline_style angled
-tab_title_template ({index}) ({num_window_groups}) {title}
+# fade, slant, separator, powerline (slanted, angled, round), custom
+
+# tab_bar_style powerline
+# tab_powerline_style angled
+
+tab_bar_style separator
+tab_separator ""
+tab_fade 0 0 0 0
+
+tab_bar_margin_width 0
+tab_bar_margin_height 5 0
+
+# tab_title_template ({index}) ({num_window_groups}) {title}
+# active_tab_title_template
+
+tab_title_template          "{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default}{fmt.bg._303030}{fmt.fg._c6c6c6} ({index}) {title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default} "
+active_tab_title_template   "{fmt.bg.default}{fmt.fg._80a0ff}{fmt.fg.default}{fmt.bg._80a0ff}{fmt.fg._080808} ({index}) {title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._80a0ff}{fmt.fg.default} "
 
 active_tab_foreground #00b2b9
 active_tab_background #170081
