--- a/home/shell/kitty/config/kitty.conf
+++ b/home/shell/kitty/config/kitty.conf
@@ -54,14 +54,15 @@ tab_bar_margin_height 5 0
 # tab_title_template ({index}) ({num_window_groups}) {title}
 # active_tab_title_template
 
-tab_title_template          "{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default}{fmt.bg._303030}{fmt.fg._c6c6c6} ({index}) {title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default} "
-active_tab_title_template   "{fmt.bg.default}{fmt.fg._80a0ff}{fmt.fg.default}{fmt.bg._80a0ff}{fmt.fg._080808} ({index}) {title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._80a0ff}{fmt.fg.default} "
+# active_tab_foreground #00b2b9
+# active_tab_background #170081
+# inactive_tab_foreground #005053
+# inactive_tab_background #05001e
 
-active_tab_foreground #00b2b9
-active_tab_background #170081
+tab_title_template          "{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default}{fmt.bg._303030}{fmt.fg._c6c6c6} {index}: {f'{title[:8]}…{title[-8:]}' if title.rindex(title[-1]) + 1 > 17 else title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._303030}{fmt.fg.default} "
+active_tab_title_template   "{fmt.bg.default}{fmt.fg._d780ff}{fmt.fg.default}{fmt.bg._d780ff}{fmt.fg._080808} {index}: {f'{title[:8]}…{title[-8:]}' if title.rindex(title[-1]) + 1 > 17 else title} {fmt.fg.default}{fmt.bg.default}{fmt.fg._d780ff}{fmt.fg.default} "
+
 active_tab_font_style bold-italic
-inactive_tab_foreground #005053
-inactive_tab_background #05001e
 inactive_tab_font_style normal
 
 # Selection
