--- a/home/visuals/polybar/config/modules/battery.ini
+++ b/home/visuals/polybar/config/modules/battery.ini
@@ -29,7 +29,7 @@ label-discharging-padding         = ${self.label-charging-padding}
 
 format-full-foreground     = ${self.format-charging-foreground}
 format-full-background     = ${self.format-charging-background}
-format-full-prefix         = 󱈏
+format-full-prefix         = 󱟢
 format-full-prefix-foreground = ${colors.color6}
 format-full-prefix-padding = ${self.format-charging-prefix-padding}
 label-full                 = ${self.label-charging}
