--- a/home/visuals/polybar/config/modules/date.ini
+++ b/home/visuals/polybar/config/modules/date.ini
@@ -5,8 +5,8 @@ interval = 1
 format                = <label>
 format-foreground     = ${colors.foreground}
 format-background     = ${colors.bcolor5}
-format-prefix         = 
-format-prefix-foreground = ${colors.magenta}
+format-prefix         = 󰔚
+format-prefix-foreground = ${colors.magenta}`
 format-prefix-padding = 1
 label                 = %time%
 label-foreground = ${colors.foreground}
