--- a/home/visuals/polybar/config/fonts.ini
+++ b/home/visuals/polybar/config/fonts.ini
@@ -13,8 +13,10 @@ font-9 = "JetBrainsMono Nerd Font:size=14;3.5"
 font-10 = "JetBrainsMono Nerd Font:size=14;3.5"
 font-11 = "JetBrainsMono Nerd Font:size=14;3.5"
 
+; font-12 = "Iosevka Nerd Font:style=Medium:size=25;6"
+; font-13 = "Iosevka Nerd Font:size=23;6"
 font-12 = "Iosevka Nerd Font:style=Medium:size=27;7"
-font-13 = "Iosevka Nerd Font:size=18;3"
-font-14 = "Iosevka Nerd Font:size=25;6"
+font-13 = "Iosevka Nerd Font:size=25;6"
+font-14 = "Iosevka Nerd Font:size=18;3"
 font-15 = "Iosevka Nerd Font:size=16;4"
 font-16 = "JetBrainsMono Nerd Font:size=18;2"
