--- a/home/visuals/polybar/config/modules/wlan.ini
+++ b/home/visuals/polybar/config/modules/wlan.ini
@@ -10,7 +10,7 @@ format-font = 14
 format-connected                   = <label-connected>
 format-connected-background        = ${colors.bcolor4}
 format-connected-foreground        = ${colors.foreground}
-format-connected-prefix            = 󰖩
+format-connected-prefix            = 󱚽
 format-connected-prefix-foreground = ${colors.color8}
 format-connected-prefix-padding    = 1
 label-connected                    = %{A1:~/bin/wifimenu:}%essid%%{A}
