--- a/home/shell/kitty/config/colors.conf
+++ b/home/shell/kitty/config/colors.conf
@@ -40,4 +40,4 @@ cursor_text_color #11111b
 
 # Selection highlight
 selection_foreground #b6beca
-selection_background #22262e
+selection_background #2b3954
