--- a/home/visuals/polybar/config/config.ini
+++ b/home/visuals/polybar/config/config.ini
@@ -30,7 +30,7 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-modules-left = spacing0 L1 menu R1 sep bspwm sep title sep temperature cpu memory
+modules-left = spacing0 L1 menu R1 sep bspwm sep temperature cpu memory
 modules-center =
 modules-right = spacing0 lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl0 tray sl1 backlight sl2 pulseaudio sl3 battery sl4 eth wlan sl5 date sr4
 
