--- a/home/shell/kitty/config/kitty.conf
+++ b/home/shell/kitty/config/kitty.conf
@@ -151,4 +151,4 @@ map ctrl+shift+w close_window
 map ctrl+shift+x scroll_to_prompt 1
 map ctrl+shift+z scroll_to_prompt -1
 map ctrl+tab next_tab
-map ctrl+v paste_from_clipboard
+map ctrl+shift+v paste_from_clipboard
