--- a/home/visuals/polybar/config/config.ini
+++ b/home/visuals/polybar/config/config.ini
@@ -7,6 +7,7 @@ include-file = $HOME/.config/polybar/arrows.ini
 [bar/main]
 ; monitor = eDP-1
 monitor = ${env:MONITOR:}
+radius = 10
 width = 100%
 height = 45
 line-size = 2
