--- a/home/programs/shells/yazi/config/yazi.toml
+++ b/home/programs/shells/yazi/config/yazi.toml
@@ -31,7 +31,7 @@ edit = [
     { run = 'code -w "%*"', block = true,  desc = "code (block)", for = "windows" },
 ]
 open = [
-    { run = 'xdg-open "$@"',                desc = "Open", for = "linux" },
+    { run = 'xdg-open "$@"',  orphan = true,  desc = "Open", for = "linux" },
     { run = 'open "$@"',                    desc = "Open", for = "macos" },
     { run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
 ]
