--- a/home/programs/shells/yazi/config/yazi.toml
+++ b/home/programs/shells/yazi/config/yazi.toml
@@ -91,7 +91,7 @@ suppress_preload = false
 [plugin]
 
 preloaders = [
-    { name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
+    # { name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
     # Image
     { mime = "image/*", run = "image" },
     # Video
