--- a/home/shell/starship/starship.toml
+++ b/home/shell/starship/starship.toml
@@ -1,6 +1,6 @@
 add_newline = true
 
-format = '''[╭─](#d10475) ❄️ $username$hostname$directory$git_branch$git_commit$git_state$git_status$jobs$cmd_duration$python$conda$nodejs$direnv$docker
+format = '''[╭─](#d10475) ❄️ $username$hostname$directory$git_branch$git_commit$git_state$git_status$jobs$cmd_duration$nix_shell$python$conda$nodejs$direnv$docker
 [╰─](#d10475) $character'''
 
 # right_format = '$time'
@@ -75,29 +75,38 @@ style = 'bright-green bold'
 [python]
 disabled = false
 symbol = '󰌠 '
-format = '[\[${symbol}\(${virtualenv}\)\]]($style)'
+format = '[\[${symbol}\(${virtualenv}\)\]]($style) '
 style = 'yellow bold'
 
 [conda]
 disabled = false
 symbol = '🐍 '
-format = '[\[${symbol}\(${environment}\)\]]($style)'
+format = '[\[${symbol}\(${environment}\)\]]($style) '
 style = 'bold fg:#81bff2'
 
 [nodejs]
 disabled = false
 symbol = ' '
-format = '[\[${symbol}\(${environment}\)\]]($style)'
+format = '[\[${symbol}\(${environment}\)\]]($style) '
 style = 'bold fg:#34eb98'
 
 [direnv]
 disabled = false
 symbol = ' '
-format = '[\[${symbol}\(${loaded}/${allowed}\)\]]($style)'
+format = '[\[${symbol}\(${loaded}/${allowed}\)\]]($style) '
 style = 'bold fg:#34eb98'
 
 [docker_context]
 disabled = false
 symbol = '🐳 '
-format = '[\[${symbol}\(${context}\)\]]($style)'
+format = '[\[${symbol}\(${context}\)\]]($style) '
 style = 'bold fg:#346beb'
+
+[nix_shell]
+disabled = false
+impure_msg = '[impure shell](bold red)'
+pure_msg = '[pure shell](bold green)'
+unknown_msg = '[unknown shell](bold yellow)'
+style = 'bold fg:#6bfdff'
+symbol = '❄️'
+format = '[\[$symbol$state( \($name\))\]]($style) '
