--- a/home/shell/starship/starship.toml
+++ b/home/shell/starship/starship.toml
@@ -109,11 +109,11 @@ pure_msg = '[pure shell](bold green)'
 unknown_msg = '[unknown shell](bold yellow)'
 style = 'bold fg:#6bfdff'
 symbol = '❄️'
-format = '[\[$symbol$state( \($name\))\]]($style) '
+format = '[\[$symbol$state(\($name\))\]]($style) '
 
 [custom.subshell]
 command = 'math $SHLVL - 4'
 when = 'test $SHLVL -gt 4'
 style = 'bold fg:#6bff77'
-symbol = ' '
+symbol = ''
 format = '[\[${symbol} \(${output}\)\]]($style) '
