--- a/home/visuals/picom/picom.conf
+++ b/home/visuals/picom/picom.conf
@@ -195,7 +195,7 @@ inactive-opacity-override = false;
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.1
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -248,7 +248,7 @@ rounded-corners-exclude = [
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "dual_kawase"
 # blur-size = 12
-#
+
 # blur-deviation = true
 #
 # blur-strength = 5
