update(misc): still cant fix the picom shadow thingy

--- a/home/visuals/picom/picom.conf
+++ b/home/visuals/picom/picom.conf
@@ -78,7 +78,8 @@ shadow = true;
 shadow-radius = 25;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .50
+# shadow-opacity = .50
+shadow-opacity = 1
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -7
@@ -138,9 +139,10 @@ shadow-exclude = [
   "class_g = 'Cairo-dock'",
   "class_g = 'activate-linux'",
   "class_g = 'firefox'",
-  "class_g = 'GLava'",
+  "class_g = 'zen'",
   "class_g = 'microsoft-edge'",
   "class_g = 'Eww'",
+  "class_g = 'GLava'",
 ];
 
 #################################
