--- a/home/shell/kitty/config/kitty.conf
+++ b/home/shell/kitty/config/kitty.conf
@@ -91,6 +91,8 @@ background_blur 30
 placement_strategy center
 hide_window_decorations no
 confirm_os_window_close 2
+window_border_width 0
+window_margin_width 0 20
 
 # Layouts
 enabled_layouts *
