--- a/home/visuals/picom/picom.conf
+++ b/home/visuals/picom/picom.conf
@@ -2,64 +2,22 @@
 # #          Animations           #
 # #################################
 
-animations: true;
-animation-stiffness = 200
-animation-window-mass = 0.4
-animation-dampening = 20
-animation-clamping = false
-animation-for-open-window = "zoom"; #open window
-animation-for-unmap-window = "zoom"; #minimize window
-animation-for-workspace-switch-in = "slide-down"; #the windows in the workspace that is coming in
-animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
-animation-for-transient-window = "slide-up"; #popup windows
-
-#################################
-#           Animations         #
-
-# !These animations WILL NOT work correctly for any other wm other than phyOS-dwm fork!
-
-# fly-in: Windows fly in from random directions to the screen
-# maximize: Windows pop from center of the screen to their respective positions
-# minimize: Windows minimize from their position to the center of the screen
-# slide-in-center: Windows move from upper-center of the screen to their respective positions
-# slide-out-center: Windows move to the upper-center of the screen
-# slide-left: Windows are created from the right-most window position and slide leftwards
-# slide right: Windows are created from the left-most window position and slide rightwards
-# slide-down: Windows are moved from the top of the screen and slide downward
-# slide-up: Windows are moved from their position to top of the screen
-# squeeze: Windows are either closed or created to/from their center y-position (the animation is similar to a blinking eye)
-# squeeze-bottom: Similar to squeeze, but the animation starts from bottom-most y-position
-# zoom: Windows are either created or destroyed from/to their center (not the screen center)
-
-#################################
-
-# #enable or disable animations
-# animations = true;
-# #change animation speed of windows in current tag e.g open window in current tag
-# animation-stiffness-in-tag = 125;
-# #change animation speed of windows when tag changes
-# animation-stiffness-tag-change = 90.0;
-
-# animation-window-mass = 0.4;
-# animation-dampening = 15;
-# animation-clamping = true;
-
-# #open windows
-# animation-for-open-window = "fly-in";
-# #minimize or close windows
-# animation-for-unmap-window = "squeeze";
-# #popup windows
-# animation-for-transient-window = "slide-up"; #available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
-
-# #set animation for windows being transitioned out while changings tags
-# animation-for-prev-tag = "minimize";
-# #enables fading for windows being transitioned out while changings tags
-# enable-fading-prev-tag = true;
-
-# #set animation for windows being transitioned in while changings tags
-# animation-for-next-tag = "slide-in-center";
-# #enables fading for windows being transitioned in while changings tags
-# enable-fading-next-tag = true;
+# animations = (
+#     {
+#         # triggers = [];
+#         # suppressions = [];
+#
+#         triggers = [ "close", "hide" ];
+# 	    preset = "slide-out";
+# 	    direction = "down";
+#     },
+#
+#     {
+#         triggers = [ "open", "show" ];
+#         preset = "slide-in";
+#         direction = "up";
+#     },
+# )
 
 #################################
 #             Shadows           #
@@ -197,7 +155,7 @@ inactive-opacity-override = false;
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.1
+inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -246,7 +204,6 @@ rounded-corners-exclude = [
 #     Background-Blurring       #
 #################################
 
-
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "dual_kawase"
 # blur-size = 12
@@ -282,7 +239,8 @@ rounded-corners-exclude = [
 
 # blur: {
 #   method = "dual_kawase";
-#   strength = 9;
+#   strength = 3;
+#   size = 10;
 #   background = true;
 #   background-frame = false;
 #   background-fixed = false;
@@ -290,14 +248,23 @@ rounded-corners-exclude = [
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-# blur-background-exclude = [
-#   "window_type = 'dock'",
-#   "window_type = 'desktop'",
-#   "window_type = 'tooltip'",
-#   "window_type = 'menu'",
-#   "_GTK_FRAME_EXTENTS@:c",
-#   "class_g = 'firefox'",
-# ];
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "window_type = 'tooltip'",
+  "window_type = 'menu'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_i *= 'slop'",
+  "class_g = 'firefox'",
+  "window_type = 'menu'",
+  "class_g = 'Plank'",
+  "class_g = 'Cairo-dock'",
+  "class_g = 'activate-linux'",
+  "class_g = 'zen'",
+  "class_g = 'microsoft-edge'",
+  "class_g = 'Eww'",
+  "class_g = 'GLava'",
+];
 
 #################################
 #       General Settings        #
