--- a/home/programs/shells/yazi/config/keymap.toml
+++ b/home/programs/shells/yazi/config/keymap.toml
@@ -2,6 +2,165 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
+[[manager.prepend_keymap]]
+on   = "!"
+run  = 'shell "$SHELL" --block --confirm'
+desc = "Open shell here"
+
+[[manager.prepend_keymap]]
+on   = "l"
+run  = "plugin --sync smart-enter"
+desc = "Enter the child directory, or open the file"
+
+[[manager.prepend_keymap]]
+on   = "<C-v>"
+run  = "plugin --sync smart-paste"
+desc = "Paste into the hovered directory or CWD"
+
+[[manager.prepend_keymap]]
+on   = "t"
+run  = "plugin --sync smart-tab"
+desc = "Create a tab and enter the hovered directory"
+
+[[manager.prepend_keymap]]
+on  = "<C-n>"
+run = '''
+	shell 'dragon -x -T "$1"' --confirm
+'''
+desc = "Drag and drop via dragon"
+
+[[manager.prepend_keymap]]
+on  = ["c", "y"]
+run = [ '''
+	shell 'echo "$@" | xclip -i -selection clipboard -t text/uri-list' --confirm
+''' ]
+desc = "Copy selected files to the system clipboard while yanking"
+
+[[manager.prepend_keymap]]
+on = [ "g", "r" ]
+run = '''
+	shell 'ya pub dds-cd --str "$(git rev-parse --show-toplevel)"' --confirm
+'''
+desc = "cd back to the root of the current Git repository"
+
+# wraparound file navigation
+[[manager.prepend_keymap]]
+on  = "k"
+run = "plugin --sync arrow --args=-1"
+desc = "File navigation wraparound"
+
+[[manager.prepend_keymap]]
+on  = "j"
+run = "plugin --sync arrow --args=1"
+desc = "File navigation wraparound"
+
+# Navigation in the parent directory without leaving the CWD
+[[manager.prepend_keymap]]
+on  = "K"
+run = "plugin --sync parent-arrow --args=-1"
+desc = "Navigation in the parent directory without leaving the CWD"
+
+[[manager.prepend_keymap]]
+on  = "J"
+run = "plugin --sync parent-arrow --args=1"
+desc = "Navigation in the parent directory without leaving the CWD"
+
+# bookmark
+[[manager.prepend_keymap]]
+on = [ "u", "a" ]
+run = "plugin yamb --args=save"
+desc = "Add bookmark"
+
+[[manager.prepend_keymap]]
+on = [ "u", "g" ]
+run = "plugin yamb --args=jump_by_key"
+desc = "Jump bookmark by key"
+
+[[manager.prepend_keymap]]
+on = [ "u", "G" ]
+run = "plugin yamb --args=jump_by_fzf"
+desc = "Jump bookmark by fzf"
+
+[[manager.prepend_keymap]]
+on = [ "u", "d" ]
+run = "plugin yamb --args=delete_by_key"
+desc = "Delete bookmark by key"
+
+[[manager.prepend_keymap]]
+on = [ "u", "D" ]
+run = "plugin yamb --args=delete_by_fzf"
+desc = "Delete bookmark by fzf"
+
+[[manager.prepend_keymap]]
+on = [ "u", "A" ]
+run = "plugin yamb --args=delete_all"
+desc = "Delete all bookmarks"
+
+[[manager.prepend_keymap]]
+on = [ "u", "r" ]
+run = "plugin yamb --args=rename_by_key"
+desc = "Rename bookmark by key"
+
+[[manager.prepend_keymap]]
+on = [ "u", "R" ]
+run = "plugin yamb --args=rename_by_fzf"
+desc = "Rename bookmark by fzf"
+
+[[manager.prepend_keymap]]
+on = [ "m" ]
+run = "plugin relative-motions"
+desc = "Trigger a new relative motion"
+
+[[manager.prepend_keymap]]
+on   = [ "f", "j" ]
+run  = "plugin --sync first-non-directory"
+desc = "Jumps to the first file"
+
+[[manager.prepend_keymap]]
+on   = [ "c", "m" ]
+run  = "plugin chmod"
+desc = "Chmod on selected files"
+
+[[manager.prepend_keymap]]
+on   = "<C-d>"
+run  = "plugin diff"
+desc = "Diff the selected with the hovered file"
+
+[[manager.prepend_keymap]]
+on   = "T"
+run  = "plugin --sync max-preview"
+desc = "Maximize or restore preview"
+
+[[manager.prepend_keymap]]
+on   = "F"
+run  = "plugin smart-filter"
+desc = "Smart filter"
+
+[[manager.prepend_keymap]]
+on   = [ "c", "a" ]
+run  = "plugin compress"
+desc = "Archive selected files"
+
+# [[manager.prepend_keymap]]
+# on   = "R"
+# run  = "plugin rsync"
+# desc = "Copy files using rsync to default location"
+
+[[manager.prepend_keymap]]
+on   = [ "g", "i" ]
+run  = "plugin lazygit"
+desc = "run lazygit"
+
+[[manager.prepend_keymap]]
+on   = [ "c", "S" ]
+run  = "plugin what-size --args='--clipboard'"
+desc = "Calc size of selection or cwd (copy to clipboard)"
+
+[[manager.prepend_keymap]]
+on   = [ "c", "s" ]
+run  = "plugin what-size"
+desc = "Calc size of selection or cwd"
+
 [manager]
 
 keymap = [
@@ -11,6 +170,9 @@ keymap = [
     { on = [ "q" ],     run = "quit --no-cwd-file", desc = "Exit the process without writing cwd-file" },
     { on = [ "<C-q>" ], run = "close",              desc = "Close the current tab, or quit if it is last tab" },
     { on = [ "<C-z>" ], run = "suspend",            desc = "Suspend the process" },
+
+    { on = [ "E" ], run = "plugin eza-preview",  desc = "Toggle tree/list dir preview" },
+    { on = ["d", "u"], run = "plugin restore", desc = "Restore last deleted files/folders" },
 
     # Navigation
     { on = [ "k" ], run = "arrow -1", desc = "Move cursor up" },
@@ -71,8 +233,8 @@ keymap = [
     { on = [ "P" ],         run = "paste --force",              desc = "Paste the files (overwrite if the destination exists)" },
     { on = [ "-" ],         run = "link",                       desc = "Symlink the absolute path of files" },
     { on = [ "_" ],         run = "link --relative",            desc = "Symlink the relative path of files" },
-    { on = [ "d" ],         run = "remove",                     desc = "Move the files to the trash" },
-    { on = [ "D" ],         run = "remove --permanently",       desc = "Permanently delete the files" },
+    { on = [ "d", "D" ],         run = "remove",                     desc = "Move the files to the trash" },
+    { on = [ "d", "d" ],         run = "remove --permanently",       desc = "Permanently delete the files" },
     { on = [ "a" ],         run = "create",                     desc = "Create a file or directory (ends with / for directories)" },
     { on = [ "r" ],         run = "rename --cursor=before_ext", desc = "Rename a file or directory" },
     { on = [ ";" ],         run = "shell --interactive",                      desc = "Run a shell command" },
@@ -97,7 +259,7 @@ keymap = [
     { on = [ "c", "n" ], run = "copy name_without_ext", desc = "Copy the name of the file without the extension" },
 
     # Filter
-    { on = [ "f" ], run = "filter --smart", desc = "Filter the files" },
+    { on = [ "f", "f" ], run = "filter --smart", desc = "Filter the files" },
 
     # Find
     { on = [ "/" ], run = "find --smart",            desc = "Find next file" },
