--- a/home/shell/kitty/config/kitty.conf
+++ b/home/shell/kitty/config/kitty.conf
@@ -3,7 +3,7 @@ include colors.conf
 
 # Fonts
 font_family MonoLisa
-font_features MonoLisa +zero +liga +ss08 +ss11 +ss17
+font_features MonoLisa +zero +liga +ss03 +ss06 +ss07 +ss08 +ss11 +ss17
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -17,6 +17,7 @@ adjust_column_width 0
 box_drawing_scale 0.001, 1, 1.5, 2
 
 # Cursor
+cursor #f530ff
 cursor_shape beam
 cursor_beam_thickness 1.5
 cursor_blink_interval 0.25
@@ -75,9 +76,10 @@ mouse_hide_wait 0
 focus_follows_mouse no
 
 # Performance
-repaint_delay 10
-input_delay 2
+repaint_delay 2
+input_delay 0
 sync_to_monitor no
+wayland_enable_ime no
 
 # Bell
 visual_bell_duration 0.0
@@ -92,7 +94,7 @@ placement_strategy center
 hide_window_decorations no
 confirm_os_window_close 2
 window_border_width 0
-window_margin_width 0 20
+window_margin_width 0 10
 
 # Layouts
 enabled_layouts *
@@ -126,7 +128,7 @@ map ctrl+shift+backspace change_font_size all 0
 map ctrl+shift+down scroll_line_down
 map ctrl+shift+end scroll_end
 map ctrl+shift+enter new_window
-map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+equal change_font_size all +1.0
 map ctrl+shift+f move_window_forward
 map ctrl+shift+f10 toggle_maximized
 map ctrl+shift+f11 toggle_fullscreen
@@ -135,11 +137,11 @@ map ctrl+shift+h show_scrollback
 map ctrl+shift+home scroll_home
 map ctrl+shift+j scroll_line_down
 map ctrl+shift+k scroll_line_up
-map ctrl+shift+kp_add change_font_size all +2.0
-map ctrl+shift+kp_subtract change_font_size all -2.0
+map ctrl+shift+kp_add change_font_size all +1.0
+map ctrl+shift+kp_subtract change_font_size all -1.0
 map ctrl+shift+l next_layout
 map ctrl+shift+left previous_tab
-map ctrl+shift+minus change_font_size all -2.0
+map ctrl+shift+minus change_font_size all -1.0
 map ctrl+shift+n new_os_window
 map ctrl+shift+page_down scroll_page_down
 map ctrl+shift+page_up scroll_page_up
