--- a/home/programs/shells/git_ssh/config
+++ b/home/programs/shells/git_ssh/config
@@ -1,47 +1,94 @@
 Host *
-  ForwardAgent no
-  AddKeysToAgent no
-  Compression no
-  ServerAliveInterval 0
-  ServerAliveCountMax 3
-  HashKnownHosts no
-  UserKnownHostsFile ~/.ssh/known_hosts
-  ControlMaster no
-  ControlPath ~/.ssh/master-%r@%n:%p
-  ControlPersist no
+    ForwardAgent no
+    AddKeysToAgent no
+    Compression no
+    ServerAliveInterval 0
+    ServerAliveCountMax 3
+    HashKnownHosts no
+    UserKnownHostsFile ~/.ssh/known_hosts
+    ControlMaster no
+    ControlPath ~/.ssh/master-%r@%n:%p
+    ControlPersist no
 
-  Host github.com
-      HostName ssh.github.com
-      User git
-      PreferredAuthentications publickey
-      ForwardAgent yes
-      IdentityFile ~/.ssh/blackwhite_yuki
-      AddKeysToAgent yes
+    Host github.com
+        HostName ssh.github.com
+        User git
+        IdentityFile ~/.ssh/blackwhite_yuki
+        PreferredAuthentications publickey
+        ForwardAgent yes
+        AddKeysToAgent yes
 
-  Host 112.137.129.158
-      ForwardAgent yes
-      IdentityFile ~/.ssh/blackwhite_yuki
-      AddKeysToAgent yes
-      User nguyenthanhphat
-      Compression no
-      ServerAliveInterval 0
-      ServerAliveCountMax 3
-      HashKnownHosts no
-      UserKnownHostsFile ~/.ssh/known_hosts
-      ControlMaster no
-      ControlPath ~/.ssh/master-%r@%n:%p
-      ControlPersist no
+    Host 112.137.129.161
+        HostName 112.137.129.161
+        ForwardAgent yes
+        User phatnt
+        IdentityFile ~/.ssh/blackwhite_yuki
+        AddKeysToAgent yes
+        Compression no
+        ServerAliveInterval 0
+        ServerAliveCountMax 3
+        HashKnownHosts no
+        UserKnownHostsFile ~/.ssh/known_hosts
+        ControlMaster no
+        ControlPath ~/.ssh/master-%r@%n:%p
+        ControlPersist no
 
-  Host 112.137.129.161
-      ForwardAgent yes
-      IdentityFile ~/.ssh/blackwhite_yuki
-      AddKeysToAgent yes
-      User phatnt
-      Compression no
-      ServerAliveInterval 0
-      ServerAliveCountMax 3
-      HashKnownHosts no
-      UserKnownHostsFile ~/.ssh/known_hosts
-      ControlMaster no
-      ControlPath ~/.ssh/master-%r@%n:%p
-      ControlPersist no
+    Host 112.137.129.158
+        HostName 112.137.129.158
+        ForwardAgent yes
+        IdentityFile ~/.ssh/blackwhite_yuki
+        AddKeysToAgent yes
+        User nguyenthanhphat
+        Compression no
+        ServerAliveInterval 0
+        ServerAliveCountMax 3
+        HashKnownHosts no
+        UserKnownHostsFile ~/.ssh/known_hosts
+        ControlMaster no
+        ControlPath ~/.ssh/master-%r@%n:%p
+        ControlPersist no
+
+    Host 158_nguyenthanhphat
+        HostName 112.137.129.158
+        ForwardAgent yes
+        IdentityFile ~/.ssh/blackwhite_yuki
+        AddKeysToAgent yes
+        User nguyenthanhphat
+        Compression no
+        ServerAliveInterval 0
+        ServerAliveCountMax 3
+        HashKnownHosts no
+        UserKnownHostsFile ~/.ssh/known_hosts
+        ControlMaster no
+        ControlPath ~/.ssh/master-%r@%n:%p
+        ControlPersist no
+
+    Host 161_phatnt
+        HostName 112.137.129.161
+        ForwardAgent yes
+        User phatnt
+        IdentityFile ~/.ssh/blackwhite_yuki
+        AddKeysToAgent yes
+        Compression no
+        ServerAliveInterval 0
+        ServerAliveCountMax 3
+        HashKnownHosts no
+        UserKnownHostsFile ~/.ssh/known_hosts
+        ControlMaster no
+        ControlPath ~/.ssh/master-%r@%n:%p
+        ControlPersist no
+
+    Host 161_automl
+        HostName 112.137.129.161
+        ForwardAgent yes
+        User automl
+        IdentityFile ~/.ssh/blackwhite_yuki
+        AddKeysToAgent yes
+        Compression no
+        ServerAliveInterval 0
+        ServerAliveCountMax 3
+        HashKnownHosts no
+        UserKnownHostsFile ~/.ssh/known_hosts
+        ControlMaster no
+        ControlPath ~/.ssh/master-%r@%n:%p
+        ControlPersist no
