--- a/home/visuals/polybar/config/modules/date.ini
+++ b/home/visuals/polybar/config/modules/date.ini
@@ -16,4 +16,4 @@ time-alt              = %A, %d %B %Y
 
 click-left =
 click-middle =
-click-right = "~/bin/calendar_launcher"
+click-right = "$HOME/.local/bin/calendar_launcher"
