--- a/home/visuals/polybar/config/modules/title.ini
+++ b/home/visuals/polybar/config/modules/title.ini
@@ -1,7 +1,7 @@
 [module/title]
 type = custom/script
 interval = 0.1
-exec = ~/bin/get_active_window
+exec = $HOME/.local/bin/get_active_window
 label = "%output%"
 label-minlen = 25
 label-maxlen = 25
