--- a/home/programs/shells/yazi/config/keymap.toml
+++ b/home/programs/shells/yazi/config/keymap.toml
@@ -4,22 +4,22 @@
 
 [[manager.prepend_keymap]]
 on   = "!"
-run  = 'shell "$SHELL" --block --confirm'
+run  = 'shell "$SHELL" --block'
 desc = "Open shell here"
 
 [[manager.prepend_keymap]]
 on   = "l"
-run  = "plugin --sync smart-enter"
+run  = "plugin smart-enter"
 desc = "Enter the child directory, or open the file"
 
 [[manager.prepend_keymap]]
 on   = "<C-v>"
-run  = "plugin --sync smart-paste"
+run  = "plugin smart-paste"
 desc = "Paste into the hovered directory or CWD"
 
 [[manager.prepend_keymap]]
 on   = "t"
-run  = "plugin --sync smart-tab"
+run  = "plugin smart-tab"
 desc = "Create a tab and enter the hovered directory"
 
 [[manager.prepend_keymap]]
@@ -46,23 +46,23 @@ desc = "cd back to the root of the current Git repository"
 # wraparound file navigation
 [[manager.prepend_keymap]]
 on  = "k"
-run = "plugin --sync arrow --args=-1"
+run = "plugin arrow --args=-1"
 desc = "File navigation wraparound"
 
 [[manager.prepend_keymap]]
 on  = "j"
-run = "plugin --sync arrow --args=1"
+run = "plugin arrow --args=1"
 desc = "File navigation wraparound"
 
 # Navigation in the parent directory without leaving the CWD
 [[manager.prepend_keymap]]
 on  = "K"
-run = "plugin --sync parent-arrow --args=-1"
+run = "plugin parent-arrow --args=-1"
 desc = "Navigation in the parent directory without leaving the CWD"
 
 [[manager.prepend_keymap]]
 on  = "J"
-run = "plugin --sync parent-arrow --args=1"
+run = "plugin parent-arrow --args=1"
 desc = "Navigation in the parent directory without leaving the CWD"
 
 # bookmark
@@ -113,7 +113,7 @@ desc = "Trigger a new relative motion"
 
 [[manager.prepend_keymap]]
 on   = [ "f", "j" ]
-run  = "plugin --sync first-non-directory"
+run  = "plugin first-non-directory"
 desc = "Jumps to the first file"
 
 [[manager.prepend_keymap]]
@@ -128,7 +128,7 @@ desc = "Diff the selected with the hovered file"
 
 [[manager.prepend_keymap]]
 on   = "T"
-run  = "plugin --sync max-preview"
+run  = "plugin max-preview"
 desc = "Maximize or restore preview"
 
 [[manager.prepend_keymap]]
@@ -214,11 +214,14 @@ keymap = [
     { on = [ "G" ],      run = "arrow 99999999",  desc = "Move cursor to the bottom" },
 
     # Selection
-    { on = [ "<Space>" ], run = [ "select --state=none", "arrow 1" ], desc = "Toggle the current selection state" },
+    # { on = [ "<Space>" ], run = [ "select --state=none", "arrow 1" ], desc = "Toggle the current selection state" },
+    # { on = [ "<C-a>" ],   run = "select_all --state=true",            desc = "Select all files" },
+    # { on = [ "<C-r>" ],   run = "select_all --state=none",            desc = "Inverse selection of all files" },
+    { on = [ "<C-a>" ],   run = "toggle_all --state=on",            desc = "Select all files" },
+    { on = [ "<C-r>" ],   run = "toggle_all",            desc = "Inverse selection of all files" },
+    { on = [ "<Space>" ], run = [ "toggle", "arrow 1" ], desc = "Toggle the current selection state" },
     { on = [ "v" ],       run = "visual_mode",                        desc = "Enter visual mode (selection mode)" },
     { on = [ "V" ],       run = "visual_mode --unset",                desc = "Enter visual mode (unset mode)" },
-    { on = [ "<C-a>" ],   run = "select_all --state=true",            desc = "Select all files" },
-    { on = [ "<C-r>" ],   run = "select_all --state=none",            desc = "Inverse selection of all files" },
 
     # Operation
     { on = [ "o" ],         run = "open",                       desc = "Open the selected files" },
@@ -268,10 +271,10 @@ keymap = [
     { on = [ "N" ], run = "find_arrow --previous",   desc = "Go to previous found file" },
 
     # Sorting
-    { on = [ ",", "m" ], run = "sort modified --dir-first",               desc = "Sort by modified time" },
-    { on = [ ",", "M" ], run = "sort modified --reverse --dir-first",     desc = "Sort by modified time (reverse)" },
-    { on = [ ",", "c" ], run = "sort created --dir-first",                desc = "Sort by created time" },
-    { on = [ ",", "C" ], run = "sort created --reverse --dir-first",      desc = "Sort by created time (reverse)" },
+    { on = [ ",", "m" ], run = "sort mtime --dir-first",               desc = "Sort by modified time" },
+    { on = [ ",", "M" ], run = "sort mtime --reverse --dir-first",     desc = "Sort by modified time (reverse)" },
+    { on = [ ",", "c" ], run = "sort btime --dir-first",                desc = "Sort by created time" },
+    { on = [ ",", "C" ], run = "sort btime --reverse --dir-first",      desc = "Sort by created time (reverse)" },
     { on = [ ",", "e" ], run = "sort extension --dir-first",         	    desc = "Sort by extension" },
     { on = [ ",", "E" ], run = "sort extension --reverse --dir-first",    desc = "Sort by extension (reverse)" },
     { on = [ ",", "a" ], run = "sort alphabetical --dir-first",           desc = "Sort alphabetically" },
