--- a/home/programs/shells/yazi/config/theme.toml
+++ b/home/programs/shells/yazi/config/theme.toml
@@ -63,7 +63,7 @@ title    = {}
 value    = {}
 selected = { reversed = true }
 
-[select]
+[pick]
 border   = { fg = "#89b4fa" }
 active   = { fg = "#f5c2e7" }
 inactive = {}
@@ -101,11 +101,7 @@ rules = [
     # Archives
     { mime = "application/zip",             fg = "#f5c2e7" },
     { mime = "application/gzip",            fg = "#f5c2e7" },
-    { mime = "application/x-tar",           fg = "#f5c2e7" },
-    { mime = "application/x-bzip",          fg = "#f5c2e7" },
-    { mime = "application/x-bzip2",         fg = "#f5c2e7" },
-    { mime = "application/x-7z-compressed", fg = "#f5c2e7" },
-    { mime = "application/x-rar",           fg = "#f5c2e7" },
+    { mime = "application/{tar,bzip*,7z-compressed,xz,rar}", fg = "#f5c2e7" },
 
     # Documents
     { mime = "application/{pdf,doc,rtf,vnd.*}", fg = "#cba6f7" },
