--- a/home/programs/shells/yazi/config/yazi.toml
+++ b/home/programs/shells/yazi/config/yazi.toml
@@ -68,7 +68,7 @@ rules = [
     { mime = "inode/x-empty",   use = [ "edit", "reveal" ] },
 
     { mime = "application/*zip", use = [ "extract", "reveal" ] },
-    { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
+    { mime = "application/{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
 
     { mime = "application/json", use = [ "edit", "reveal" ] },
     { mime = "*/javascript",     use = [ "edit", "reveal" ] },
@@ -78,7 +78,7 @@ rules = [
 prepend_rules = [
     { name = "*.pdf", use = ["zathura", "reveal"] },
     { mime = "application/*zip", use = [ "extract", "extract-folder", "reveal" ] },
-    { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "extract-folder", "reveal" ] },
+    { mime = "application/{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "extract-folder", "reveal" ] },
 ]
 
 [tasks]
@@ -136,7 +136,7 @@ previewers = [
     { mime = "application/pdf", run = "pdf" },
     # Archive
     { mime = "application/*zip", run = "archive" },
-    { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", run = "archive" },
+    { mime = "application/{tar,bzip*,7z-compressed,xz,rar}", run = "archive" },
     # Fallback
     { name = "*", run = "file" },
 ]
@@ -148,7 +148,7 @@ cd_origin = "top-center"
 cd_offset = [ 0, 2, 50, 3 ]
 
 # create
-create_title  = "Create:"
+create_title  = [ "Create:", "Create (dir):" ]
 create_origin = "top-center"
 create_offset = [ 0, 2, 50, 3 ]
 
