--- a/home/visuals/polybar/config/modules/wlan.ini
+++ b/home/visuals/polybar/config/modules/wlan.ini
@@ -13,7 +13,7 @@ format-connected-foreground        = ${colors.foreground}
 format-connected-prefix            = 󱚽
 format-connected-prefix-foreground = ${colors.color8}
 format-connected-prefix-padding    = 1
-label-connected                    = %{A1:~/bin/wifimenu:}%essid%%{A}
+label-connected                    = %{A1:$HOME/.local/bin/wifimenu:}%essid%%{A}
 label-connected-foreground = ${colors.foreground}
 label-connected-padding            = 1
 
@@ -22,7 +22,7 @@ format-disconnected-foreground     = ${colors.alert}
 format-disconnected-background     = ${self.format-connected-background}
 format-disconnected-prefix         = 󰖪
 format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
-label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
+label-disconnected                 = %{A1:$HOME/.local/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
 
-click-left = ~/bin/wifi_menu
+click-left = $HOME/.local/bin/wifi_menu
